# TextualDon

./: .gitignore  CHANGELOG.md  Makefile  README.md  Roadmap.md  TODO.md  pyproject.toml  roadmap.md  test.md  tmux.sh
notes/: bs4_cheatsheet.md  widget_focus.md
textualdon/: __main__.py  bars.py  config.ini  create_tables.sql  error_handler.py  messages.py  oauth.py  pages.py  proxy.py  savedusers.py  screens.py  settings.py  simplebutton.py  toot.py  tootbox.py  tootscreens.py  version.py  widgets.py
textualdon/css/: pages.tcss  screens.tcss  settings.tcss  toot.tcss  widgets.tcss
